# glyph

./: .gitignore  Setup.hs  glyph.cabal
src/: Main.hs
src/Control/Monad/: Ref.hs  Weak.hs
src/Control/Monad/Ref/: Class.hs
src/Control/Monad/Trans/: Ref.hs
src/Data/: Record.hs
src/Data/Record/: List.hs  Map.hs
src/Data/WeakIntMap/: Base.hs  Lazy.hs  Strict.hs
src/Language/Glyph/: AddCallSet.hs  AddExtraSet.hs  AddFreeVars.hs  AddName.hs  AddNestedFuns.hs  AddSort.hs  AddVarDecls.hs  Annotation.hs  CheckBreak.hs  CheckContinue.hs  CheckFun.hs  CheckReturn.hs  CheckVar.hs  Constraint.hs  Error.hs  ErrorIO.hs  ExtraSet.hs  FreeVars.hs  Generics.hs  HM.hs  Hoopl.hs  IR.hs  Ident.hs  IdentMap.hs  IdentSet.hs  Identify.hs  InferType.hs  Lex.hs  Loc.hs  Location.hs  Logger.hs  Map.hs  Message.hs  Monad.hs  Monoid.hs  Msg.hs  Parse.hs  Parser.hs  Pretty.hs  Record.hs  (+16 more)
src/Language/Glyph/Annotation/: CallSet.hs  ExtraSet.hs  FreeVars.hs  Location.hs  Name.hs  NestedFuns.hs  Sort.hs  Type.hs  TypeScheme.hs  VarDecls.hs  With.hs
src/Language/Glyph/HM/: InferType.hs  Lex.hs  Parse.hs  Syntax.hs  Token.hs
src/Language/Glyph/Hoopl/: ConstProp.hs  Live.hs  Monad.hs  RemoveUnreachable.hs  Simplify.hs  Syntax.hs  ToGraph.hs
src/Language/Glyph/IR/: FromStmts.hs  Live.hs  Operand.hs  RemoveUnreachable.hs  Syntax.hs  ToGraph.hs  ToHM.hs
src/Language/Glyph/Ident/: Internal.hs
src/Language/Glyph/IdentSet/: Internal.hs
src/Language/Glyph/Internal/: Ident.hs  Lex.x  Location.hs  Parse.y  Parser.hs  Type.hs  Typer.hs
src/Language/Glyph/Lex/: Alex.hs  Internal.x
src/Language/Glyph/List/: Strict.hs
src/Language/Glyph/Logger/: Class.hs  Instances.hs
src/Language/Glyph/Monad/: Symtab.hs
src/Language/Glyph/Parse/: Internal.y
src/Language/Glyph/Parser/: Internal.hs
src/Language/Glyph/Record/: CallSet.hs  ExtraSet.hs  FreeVars.hs  Insns.hs  Loc.hs  Module.hs  Name.hs  Sort.hs  Stmts.hs  Symtab.hs  Types.hs
src/Language/Glyph/State/: Strict.hs
templates/: AlexTemplate  AlexTemplate-ghc  AlexWrapper-glyph
(+22 files in other folders)
