name: glyph
build-type: Custom
version: 0.1
cabal-version: >= 1.2

executable glyph
  main-is: Main.hs
  other-modules:
    Language.Glyph.Lex.Internal
    Language.Glyph.Parse.Internal
    -- Language.Glyph.ASM.Lex.Internal
    -- Language.Glyph.ASM.Parse.Internal
  hs-source-dirs: src
  build-depends:
    base == 4.*,
    array,
    bytestring,
    cmdargs,
    comonad,
    containers,
    mtl,
    semigroupoids,
    semigroups,
    syb,
    template-haskell,
    text,
    hoopl,
    wl-pprint-extras
  build-tools: alex >= 3, happy
  ghc-options: -Wall